--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,12 +1,36 @@
 .catalog {
   background-color: @color-white;
 
+  box-sizing: border-box;
   padding: 20px;
+  padding-right: 28px;
   padding-top: 27px;
+
+  @media (min-width: @tablet-width) {
+    padding: 30px;
+    padding-top: 27px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 110px;
+    padding-top: 27px;
+  }
+}
+
+.catalog__wrapper {
+  width: 282px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
 }
 
 .catalog__title {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
@@ -14,15 +38,23 @@
 
 .catalog__product-list {
   margin-bottom: 36px;
-}
 
-.catalog__more {
-  margin: 0;
-  padding: 0;
+  display: grid;
+  grid-template-columns: 282px;
+
+  @media (min-width: @tablet-width) {
+    grid-template-columns: 324px 324px;
+    gap: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 245px 245px 245px 245px;
+    gap: 63px 80px;
+  }
 }
 
 .catalog__show-more {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -31,7 +63,7 @@
 }
 
 .catalog__comment {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
@@ -39,7 +71,7 @@
 }
 
 .catalog__button-show-all {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
