--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -1,17 +1,29 @@
 .cooperation {
-  padding: 20px;
-  padding-bottom: 26px;
-  padding-top: 26px;
   background-color: @color-basic-grey;
 
+  box-sizing: border-box;
+  padding: 26px 20px;
+  margin: 0 auto;
+  min-height: 112px;
 
-  .cooperation__info--index {
-    background-color: @color-white;
+  @media (min-width: @tablet-width) {
+    padding: 56px 70px;
+    min-height: 199px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 56px 80px;
+    width: 565px;
+    min-height: 198px;
   }
 }
 
+.cooperation--index {
+  background-color: @color-white;
+}
+
 .cooperation__title {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -20,7 +32,7 @@
 }
 
 .cooperation__address {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
