--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -6,7 +6,7 @@
 }
 
 .html-academy__link {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
