--- a/source/less/blocks/parametrs.less
+++ b/source/less/blocks/parametrs.less
@@ -1,13 +1,9 @@
-.parametrs {
-
-}
-
 .parametrs__list {
   list-style: none;
 }
 
 .parametrs__info {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 24px;
   line-height: 40px;
@@ -15,7 +11,7 @@
 }
 
 .parametrs__info-description {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
