--- a/source/less/blocks/product-editional.less
+++ b/source/less/blocks/product-editional.less
@@ -1,5 +1,5 @@
 .product-editional__name {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
@@ -8,7 +8,7 @@
 }
 
 .product-editional__volume {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
@@ -16,7 +16,7 @@
 }
 
 .product-editional__cost {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
@@ -25,7 +25,7 @@
 }
 
 .product-editional__order {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
