--- a/source/less/blocks/form-comment.less
+++ b/source/less/blocks/form-comment.less
@@ -1,5 +1,5 @@
 .form-comment__title {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
@@ -7,7 +7,7 @@
 }
 
 .form-comment__text-area {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
