--- a/source/less/blocks/form-info.less
+++ b/source/less/blocks/form-info.less
@@ -3,7 +3,7 @@
 }
 
 .form-info__parameter {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
@@ -12,7 +12,7 @@
 }
 
 .form-info__input {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
