--- a/source/less/blocks/form-radio.less
+++ b/source/less/blocks/form-radio.less
@@ -3,7 +3,7 @@
 }
 
 .form-radio__control-label {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
