--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -1,6 +1,6 @@
 .main-container {
   background-color: @color-white;
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
