--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -1,17 +1,29 @@
 .present {
-  background-image: url("/../../img/catalog-cat-background.jpg");
+  background-image: url("../img/catalog-cat-background.jpg");
   background-repeat: no-repeat;
-  background-color: @color-basic-green;
 
-  margin: 0;
+  box-sizing: border-box;
+  width: 280px;
+  min-height: 290px;
+  margin: 0 auto;
   padding-left: 58px;
   padding-right: 61px;
   padding-bottom: 43px;
   padding-top: 59;
+
+  @media (min-width: @tablet-width) {
+    width: 707px;
+    min-height: 200px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    min-height: 289px;
+  }
 }
 
 .present__description {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
