--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -3,7 +3,7 @@
 }
 
 .product__name {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -11,7 +11,7 @@
 }
 
 .product__description {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
@@ -19,7 +19,7 @@
 }
 
 .product__value {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
@@ -27,7 +27,7 @@
 }
 
 .product__order-button {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
