--- a/source/less/blocks/program-info.less
+++ b/source/less/blocks/program-info.less
@@ -1,6 +1,35 @@
 .program-info {
+  box-sizing: border-box;
+  padding: 20px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    padding: 30px;
+    padding-right: 105px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 110px;
+    padding-right: 106px;
+  }
+}
+
+.program-info__wrapper {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  width: 279px;
+  min-height: 380px;
+
+  @media (min-width: @tablet-width) {
+    width: 633px;
+    min-height: 689px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    min-height: 374px;
+  }
 }
 
 .program-info__block-icon {
@@ -8,7 +37,7 @@
 }
 
 .program-info__title {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
@@ -19,14 +48,21 @@
 
   padding: 0;
   margin: 0;
-}
 
-.program-info__item {
+  display: grid;
+  grid-template-columns: 279px;
 
+  @media (min-width: @tablet-width) {
+    grid-template-columns: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 230px 246px 248px 250px;
+  }
 }
 
 .program-info__description {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
