--- a/source/less/blocks/programs-food.less
+++ b/source/less/blocks/programs-food.less
@@ -1,4 +1,33 @@
 .programs-food {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  padding: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 110px;
+    padding-bottom: 0px;
+  }
+}
+
+.programs-food__wrapper {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  width: 280px;
+  min-height: 552px;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+    min-height: 774px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    min-height: 374px;
+  }
 }
