--- a/source/less/blocks/programs-list.less
+++ b/source/less/blocks/programs-list.less
@@ -3,6 +3,16 @@
 
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    /* ... */
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+  }
 }
 
 .programs-list__item {
@@ -15,7 +25,7 @@
 }
 
 .programs-list__name {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 24px;
   line-height: 37px;
@@ -23,7 +33,7 @@
 }
 
 .programs-list__description {
-  font-family: "Arial", sans-serif;
+  font-family: @font-arial;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
@@ -31,7 +41,7 @@
 }
 
 .programs-list__catalog-link {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @font-oswald;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
