--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -1,3 +1,4 @@
+/* Colors */
 @color-white: #ffffff;
 @color-black: #000000;
 @color-black-2: #111111;
@@ -11,3 +12,11 @@
 @color-light-grey-2: #D9D9D9;
 @color-special-grey: #CDCDCD;
 @color-special-grey-2: #666666;
+
+/* Fonts */
+@font-oswald: "Oswald", "Arial", sans-serif;
+@font-arial: "Arial", sans-serif;
+
+/* Viewports */
+@tablet-width: 768px;
+@desktop-width: 1200px;
