--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,39 +1,43 @@
-@import "blocks/button.less";
-@import "blocks/catalog.less";
-@import "blocks/catalog-edditional.less";
-@import "blocks/company.less";
-@import "blocks/company-logo.less";
-@import "blocks/cooperation.less";
-@import "blocks/edditional-list.less";
-@import "blocks/example.less";
-@import "blocks/form-checkbox.less";
-@import "blocks/form-comment.less";
-@import "blocks/form-cotacts.less";
-@import "blocks/form-info.less";
-@import "blocks/form-radio.less";
-@import "blocks/functional-food.less";
-@import "blocks/html-academy.less";
-@import "blocks/main-container.less";
-@import "blocks/main-footer.less";
-@import "blocks/main-header.less";
-@import "blocks/navigation.less";
-@import "blocks/page.less";
-@import "blocks/parametrs.less";
-@import "blocks/present.less";
-@import "blocks/product.less";
-@import "blocks/product-editional.less";
-@import "blocks/product-list.less";
-@import "blocks/program-info.less";
-@import "blocks/programs-food.less";
-@import "blocks/programs-list.less";
-@import "blocks/range.less";
-@import "blocks/select-program.less";
-@import "blocks/site-list.less";
-@import "blocks/social.less";
-
-
-
 @import "common/border.less";
 @import "common/fonts.less";
 @import "common/variables.less";
 @import "common/visually-hidden.less";
+
+/* index.html */
+@import "blocks/page.less";
+//@import "blocks/page__body.less";
+@import "blocks/main-header.less";
+@import "blocks/company-logo.less";
+@import "blocks/navigation.less";
+@import "blocks/site-list.less";
+@import "blocks/main-container.less";
+@import "blocks/functional-food.less";
+@import "blocks/button.less";
+@import "blocks/programs-food.less";
+@import "blocks/programs-list.less";
+@import "blocks/program-info.less";
+@import "blocks/example.less";
+@import "blocks/parametrs.less";
+@import "blocks/range.less";
+@import "blocks/main-footer.less";
+@import "blocks/cooperation.less";
+@import "blocks/company.less";
+@import "blocks/social.less";
+@import "blocks/html-academy.less";
+
+/* catalog.html */
+@import "blocks/catalog.less";
+@import "blocks/product-list.less";
+@import "blocks/product.less";
+@import "blocks/catalog-edditional.less";
+@import "blocks/edditional-list.less";
+@import "blocks/product-editional.less";
+@import "blocks/present.less";
+
+/* form.html */
+@import "blocks/select-program.less";
+@import "blocks/form-info.less";
+@import "blocks/form-radio.less";
+@import "blocks/form-contacts.less";
+@import "blocks/form-comment.less";
+@import "blocks/form-checkbox.less";
