--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -13,7 +13,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 110px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 }
 
@@ -24,20 +24,20 @@
   display: grid;
   grid-template-columns: 280px;
   grid-template-areas: "description"
-                        "parametrs"
-                        "range";
+    "parametrs"
+    "range";
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 708px;
     grid-template-areas: "description"
-                          "parametrs"
-                          "range";
+      "parametrs"
+      "range";
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 436px 591px;
     grid-template-areas: "description range"
-                          "parametrs range";
+      "parametrs range";
   }
 }
 
