--- a/source/less/blocks/programs-food.less
+++ b/source/less/blocks/programs-food.less
@@ -1,6 +1,5 @@
 .programs-food {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
   padding: 20px;
 
@@ -10,7 +9,7 @@
 
   @media (min-width: @desktop-width) {
     padding: 110px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
 }
 
