--- a/source/less/blocks/functional-food.less
+++ b/source/less/blocks/functional-food.less
@@ -9,7 +9,7 @@
   padding-top: 27px;
 
   @media (min-width: @tablet-width) {
-    width: 709px;
+    min-width: 709px;
     min-height: 810px;
 
     background-image: none;
@@ -18,7 +18,7 @@
   @media (min-width: @desktop-width) {
     background-image: url("../img/index-cat-background.jpg");
     background-repeat: no-repeat;
-    width: 920px;
+    min-width: 920px;
     min-height: 499px;
   }
 }
