--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
 
   box-sizing: border-box;
-  width: 280px;
+  min-width: 280px;
   min-height: 290px;
   margin: 0 auto;
   padding-left: 58px;
@@ -12,12 +12,12 @@
   padding-top: 59;
 
   @media (min-width: @tablet-width) {
-    width: 707px;
+    min-width: 707px;
     min-height: 200px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 245px;
+    min-width: 245px;
     min-height: 289px;
   }
 }
