--- a/source/less/blocks/program-info.less
+++ b/source/less/blocks/program-info.less
@@ -1,23 +1,24 @@
 .program-info {
-  box-sizing: border-box;
   padding: 20px;
-  margin: 0;
 
   @media (min-width: @tablet-width) {
     padding: 30px;
+    padding-top: 0;
     padding-right: 105px;
+    padding-bottom: 47px;
+    border-bottom: 1px solid @color-light-grey-2;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 110px;
-    padding-right: 106px;
+    padding: 0 110px;
+    border-bottom: none;
   }
 }
 
 .program-info__wrapper {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   width: 279px;
   min-height: 380px;
 
@@ -27,13 +28,91 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
+    width: 1224px;
     min-height: 374px;
   }
 }
 
 .program-info__block-icon {
   background-color: @color-basic-green;
+  width: 152px;
+  height: 60px;
+  margin-right: 20px;
+  margin-bottom: 31px;
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+.program-info__block-icon--leaf::after {
+  content: url("../img/leaf.svg");
+  position: absolute;
+  left: 16px;
+  top: 13px;
+
+  @media (min-width: @tablet-width) {
+    left: 25px;
+    top: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 25px;
+    top: 25px;
+  }
+}
+
+.program-info__block-icon--water::after {
+  content: url("../img/water.svg");
+  position: absolute;
+  left: 16px;
+  top: 13px;
+
+  @media (min-width: @tablet-width) {
+    left: 25px;
+    top: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 25px;
+    top: 25px;
+  }
+}
+
+.program-info__block-icon--fork::after {
+  content: url("../img/fork.svg");
+  position: absolute;
+  left: 16px;
+  top: 13px;
+
+  @media (min-width: @tablet-width) {
+    left: 25px;
+    top: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 25px;
+    top: 25px;
+  }
+}
+
+.program-info__block-icon--alarm::after {
+  content: url("../img/alarm.svg");
+  position: absolute;
+  left: 16px;
+  top: 13px;
+
+  @media (min-width: @tablet-width) {
+    left: 25px;
+    top: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 25px;
+    top: 25px;
+  }
 }
 
 .program-info__title {
@@ -41,23 +120,76 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
+  margin: 0;
+  margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 32px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 32px;
+  }
 }
 
 .program-info__list {
   list-style: none;
+  counter-reset: program-info;
 
   padding: 0;
   margin: 0;
 
   display: grid;
   grid-template-columns: 279px;
+  gap: 20px;
 
   @media (min-width: @tablet-width) {
-    grid-template-columns: 708px;
+    grid-template-columns: 250px 250px;
+    gap: 37px 130px;
   }
 
   @media (min-width: @desktop-width) {
-    grid-template-columns: 230px 246px 248px 250px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 80px;
+  }
+}
+
+.program-info__item {
+  display: flex;
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: column;
+    padding-top: 40px;
+    padding-bottom: 57px;
+
+    &::after {
+      position: absolute;
+      left: 126px;
+      top: -2px;
+      counter-increment: program-info;
+      content: counter(program-info);
+      color: @color-basic-grey;
+      font-family: @font-oswald;
+      font-weight: 400;
+      font-size: 280px;
+      line-height: 280px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: column;
+    padding-top: 40px;
+    padding-bottom: 57px;
+
+    &::after {
+      left: 126px;
+      top: -2px;
+    }
   }
 }
 
@@ -66,5 +198,16 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
+  margin: 0;
   color: @color-dark-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
