--- a/source/less/blocks/programs-food.less
+++ b/source/less/blocks/programs-food.less
@@ -1,10 +1,8 @@
 .programs-food {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 20px;
-
   @media (min-width: @tablet-width) {
     padding: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
@@ -16,17 +14,14 @@
 .programs-food__wrapper {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   width: 280px;
-  min-height: 552px;
 
   @media (min-width: @tablet-width) {
     width: 708px;
-    min-height: 774px;
   }
 
   @media (min-width: @desktop-width) {
     width: 1220px;
-    min-height: 374px;
   }
 }
