--- a/source/less/common/border.less
+++ b/source/less/common/border.less
@@ -1,5 +1,6 @@
-.main-header,
-.main-footer,
+/*
+//.main-header,
+//.main-footer,
 .programs-food,
 .functional-food,
 .program-info,
@@ -12,13 +13,14 @@
 }
 
 .programs-list__item,
-.parametrs,
-.cooperation,
-.company,
-.social,
-.html-academy,
+//.parametrs,
+//.cooperation,
+//.company,
+//.social,
+//.html-academy,
 .product,
 .product-editional,
 .catalog__more {
   outline: 2px solid @color-basic-green;
 }
+*/
