--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -18,14 +18,14 @@
 }
 
 .catalog__wrapper {
-  width: 282px;
+  min-width: 282px;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    min-width: 708px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
+    min-width: 1220px;
   }
 }
 
@@ -40,15 +40,15 @@
   margin-bottom: 36px;
 
   display: grid;
-  grid-template-columns: 282px;
+  grid-template-columns: minmax(282px, 1fr);
 
   @media (min-width: @tablet-width) {
-    grid-template-columns: 324px 324px;
+    grid-template-columns: 1fr 1fr;
     gap: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    grid-template-columns: 245px 245px 245px 245px;
+    grid-template-columns: repeat(4, 1fr);
     gap: 63px 80px;
   }
 }
