--- a/source/less/blocks/company.less
+++ b/source/less/blocks/company.less
@@ -1,6 +1,21 @@
 .company {
-  margin: 0;
+  width: 320px;
+  margin: 0 auto;
   padding: 96px;
   padding-top: 39px;
   padding-bottom: 32px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    margin: 0;
+    width: 128px;
+  }
+
+  @media (min-width: @desktop-width) {
+    /*...*/
+  }
+}
+
+.company__image {
+  margin: 0 auto;
 }
