--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -14,10 +14,26 @@
 
 .main-container__programs-food {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 45px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 71px;
+  }
 }
 
 .main-container__program-info {
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 43px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 69px;
+  }
 }
 
 .main-container__catalog {
@@ -25,9 +41,5 @@
 }
 
 .main-container__catalog-edditional {
-  margin-bottom: 35px;
-}
-
-.main-container__present {
   margin-bottom: 35px;
 }
