--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -6,8 +6,19 @@
   padding: 0;
 }
 
+.main-footer__wrapper {
+  @media (min-width: @tablet-width) {
+    width: 768px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
+}
+
 .main-footer__wrapper-link {
-  width: 281px;
+  min-width: 281px;
   min-height: 34px;
   margin: 0 auto;
   padding: 0;
@@ -15,9 +26,10 @@
   flex-direction: column;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
+    width: 768px;
     flex-direction: row;
     justify-content: space-between;
+    padding: 58px 30px 55px 30px;
   }
 
   @media (min-width: @desktop-width) {
