--- a/source/less/blocks/select-program.less
+++ b/source/less/blocks/select-program.less
@@ -33,15 +33,15 @@
 .select-program__wrapper-info {
   display: flex;
   flex-direction: column;
-  width: 280px;
+  min-width: 280px;
 
   @media (min-width: @tablet-width) {
-    width: 630px;
+    min-width: 630px;
   }
 
   @media (min-width: @desktop-width) {
     flex-direction: row;
-    width: 1218px;
+    min-width: 1218px;
   }
 }
 
