--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,9 +1,49 @@
 .site-list {
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .site-list__item {
   text-transform: uppercase;
   list-style: none;
+  text-align: center;
+  min-height: 66px;
+  position: relative;
+
+  @media (max-width: @mobile-width-only) {
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -22px;
+      background-color: @color-light-grey-2;
+      width: 100%;
+      height: 2px;
+    }
+  }
+}
+
+.site-list__link {
+  text-decoration: none;
+  color: @color-black;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.site-list__link--current {
+  border-bottom: 2px @color-basic-green solid;
 }
