--- a/source/less/common/variables.less
+++ b/source/less/common/variables.less
@@ -9,7 +9,8 @@
 @color-dark-grey-2: #222222;
 @color-basic-grey: #F2F2F2;
 @color-light-grey: #EAEAEA;
-@color-light-grey-2: #D9D9D9;
+@color-light-grey-2: #E6E6E6;
+@color-light-grey-3: #D9D9D9;
 @color-special-grey: #CDCDCD;
 @color-special-grey-2: #666666;
 
@@ -19,4 +20,11 @@
 
 /* Viewports */
 @tablet-width: 768px;
-@desktop-width: 1200px;
+@desktop-width: 1440px;
+@mobile-width-only: 768px;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
